[gd_scene load_steps=3 format=3 uid="uid://cw1cx6d7ypwga"]

[ext_resource type="Script" uid="uid://uw3my6k0uyrj" path="res://scenes/game_over.gd" id="1_xeevv"]
[ext_resource type="AudioStream" uid="uid://yccpkki85ryy" path="res://audio/mensajefinal.wav" id="2_wqhvx"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xeevv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4841724, 0.15261629, 0.4121466, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(800, 200)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 120
text = "Te quedaste 
sin perezosos"

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "
Lauti arroj칩 654 corazones
Acert칩 54"

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "
Guau! 
M치s de 20 corazones acertados!
Debe ser porque te amo mucho!"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.5
offset_top = -69.0
offset_right = 84.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 20

[node name="Label3" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 45
text = "Click ac치 para volver a jugar	"

[node name="TextureButton" type="TextureButton" parent="MarginContainer"]
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_wqhvx")

[connection signal="pressed" from="MarginContainer/TextureButton" to="." method="_on_texture_button_pressed"]
